beginning/practice2.css
@font-face {
    font-family:logo;
    src: url(/Fonts/foundationone/FoundationOne.ttf);}
@font-face {
    font-family: list ;
    src: url(/Fonts//quadrillion/Quadrillion\ Sb.otf);
}
@font-face {
    font-family:maqui ;
    src: url(/Fonts/maqui/Maqui\ Hv.otf);
}
@font-face {
    font-family: audex ;
    src: url(/Fonts/audex/Audex-Regular.otf);
}
@font-face {
    font-family:exo ;
    src: url(/Fonts/exo/Exo-Thin.otf);
}
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    color: rgb(255, 255, 255);
}
.main{
    /* min-height: 100vh; */
    height: 100%;
    width: 100%;

    background-image: url(/images/hero-bg.jpg);
    background-size: cover;
    background-position: center top ;
    background-repeat: no-repeat;
    overflow: hidden;
    position: relative;
    
}
.main::after{
    content:"";
    position:absolute;
    inset:0;
    background:linear-gradient(
        to bottom,
        transparent 55%,
        rgb(0, 6, 15) 100%
    );
    pointer-events:none;
    /* border: 1px solid white; */
}
.nav-bar{
    width:100% ;
    padding: 20px 35px;

    background-color: rgba(255, 255, 255, 0.103);
    border: 1px solid rgb(138, 138, 138);
    border-radius: 0 0 20px 20px;
    box-shadow: 0 0 20px black;
    backdrop-filter: blur(5px);

    display: flex;
    justify-content: space-between;
    align-items: center;

    
}
.nav-logo{
    font-family: logo;
    font-size: 1.4rem;
    position: relative;

    transition: all 0.6s ease 0.1s;
}
.nav-logo:hover{
    color: rgb(157, 240, 255);
}
.nav-logo::after{
    content: '';
    position: absolute;
    height: 3px;
    width: 0%;

    bottom: -3px;
    left: -5px;
    background: linear-gradient(to right, transparent 1%,rgb(157, 240, 255));
    border-radius: 20px;
    transition: all 0.5s ease 0.1s;
}
.nav-logo:hover::after{
    width: 107%;
}
.nav-lists{
    font-family: list;
    font-size: 0.9rem;
    display: flex;
    gap:30px;
}
.account{
    height: 35px;
    width: 115px;
    padding: 5px;
    font-family: logo;
    font-size: 0.7rem;
    cursor: pointer;

    background-color: rgba(255, 255, 255, 0.255);
    border-radius: 20px;
    border: 1px solid rgba(255, 255, 255, 0.178);
    box-shadow: 0 0 10px rgb(25, 25, 25);

    display: flex;
    align-items: center;
    gap:10px;
    
    transition:
        transform 0.3s ease,
        box-shadow 0.3s ease;
    
}
.account:hover{
    box-shadow: 1px 5px 10px rgb(26, 26, 26);
    transform: translateY(-3px);
}
.account:active{
    transition: transform 0.1s ease;
    transform: translateY(1px);
}



/* Hero */
.hero{
    min-height: 650px;
    display: flex;
    align-items: center;
}
.hero-content{
    max-width: 1200px;
    margin: 0 auto;

    display: flex ;
    flex-direction: column;
    align-items: center;
}
.hero-txt {
    margin-bottom: 60px;
    font-size: 0.7rem;
    letter-spacing: 7px;
    word-spacing: 5px;
}
.hero-main{

    font-size: 2rem;
    letter-spacing: px;
    
}
.hero-btn{
    margin-top: 100px;
    padding:20px 50px;

    background-color:#5096ff55;
    border-radius: 15px;
    box-shadow: 0 5px 10px rgba(0, 166, 255, 0.632);
    border:1px solid rgba(255, 255, 255, 0.553);

    font-size: 1.1rem;
    position: relative;
    isolation: isolate;
    z-index: 1;
}

.features{
    width: 100%;
  /* background: rgb(0, 6, 15); */
  background:linear-gradient(to right ,rgb(0, 6, 15), black) ;
  padding: 80px 0;
  margin: auto;
  overflow: hidden;
  border: 1px solid white;
}
.feature-card{
    min-height: 500px;
    max-width: 1900px;
    margin: auto;
    display: grid;
    grid-template-columns:  1fr minmax(0, 500px);
    gap:30px;
    align-items: center;
    /* grid-template-areas:
    "text image"; */
}
/* .feature-txt{
    margin-left:150px;
    max-width: 900px;
    /* grid-area:text;
} */
.feature-txt {
    margin-left: 0;
    padding-left: 100px; 
}
.feature-img{
    /* grid-area:image;     */
    height: 300px;
    width:500px;
    max-width: 100vw;
    border-radius: 500px 0 0 500px;
    overflow: hidden;
    box-shadow: 0 5px 10px rgb(59, 105, 255);
    border: 1px solid rgb(0, 183, 255);
}
.feature-img img{
    width:500px;
    height:300px;
    object-fit:cover;
}
.feature-abt{
    font-size: 1rem;
    margin-bottom: 20px;
    word-spacing: 5px;
    letter-spacing: 10px;
    color: rgb(255, 166, 0);
    font-family: audex;
}
.feature-h{
    font-family: maqui;
    font-size: 2.5rem;
    margin-bottom: 20px;
    letter-spacing: 3px;
    /* color: rgb(165, 165, 165); */
}
.fetaure-content{
    font-family: exo;
    line-height: 1.6rem;
    color: rgb(202, 202, 202);
}
                                        /* nth hting */

/* .feature-card:nth-child(even){

    grid-template-areas:
    "image text";
} */

.feature-card:nth-child(even) .feature-img{
    order:-1;
    border-radius: 0 500px 500px 0;
}
.feature-card:nth-child(even) .feature-txt{
    margin-right: 0;
    padding:100px;
    text-align: end;
}

.feature-card:nth-child(even){
    grid-template-columns: 500px 1fr;
}

.sub-feature{
    min-height: 500px;
    margin: auto;
    background:linear-gradient(to right ,rgb(0, 6, 15), black) ;
    /* overflow: hidden; */
}
.sub-content{
    height: 500px;
    width: min(1100px,90%);
    /* max-width: 100px; */
    margin: auto;

    display: grid;
    align-items: center;
    /* gap: 120px; */
    grid-template-columns: 1fr 2fr ;
}
.feature-title{
    margin-bottom: 40px;
}
.feature-btn{
    background-color: rgb(138, 138, 0);
}



@media (max-width: 768px){
  .main{
    background-position: 45% center;
  }
}

